# mate-system-tools

./: AUTHORS  ChangeLog  DirsMakefile  Makefile.am  NEWS  NEWS.gnome  README  autogen.sh  configure.ac  configure.in  org.mate.system-tools.gschema.xml.in
.tx/: config
distro/archlinux/: PKGBUILD  mate-system-tools.install
doc/network/: Makefile.am
doc/services/: Makefile.am
doc/shares/: Makefile.am
doc/time/: Makefile.am
doc/time/C/: index.docbook
doc/time/ca/: ca.po
doc/time/cs/: cs.po
doc/time/de/: de.po
doc/time/el/: el.po
doc/time/en_GB/: en_GB.po
doc/time/es/: es.po
doc/time/fr/: fr.po
doc/time/gl/: gl.po
doc/time/it/: it.po
doc/time/nl/: time-admin.xml
doc/time/oc/: oc.po
doc/time/pt_BR/: pt_BR.po
doc/time/ru/: ru.po
doc/time/sv/: sv.po
doc/time/zh_CN/: zh_CN.po
doc/users/: Makefile.am
interfaces/: time.ui
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  cmn.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_CL.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gnome-copyrights.txt  gu.po  he.po  hi.po  (+57 more)
src/common/: Makefile.am  gst-dialog.c  gst-dialog.h  gst-filter.c  gst-filter.h  gst-platform-dialog.c  gst-platform-dialog.h  gst-service-role.c  gst-service-role.h  gst-tool.c  gst-tool.h
src/network/: Makefile.am  address-list.c  address-list.h  callbacks.c  callbacks.h  connection.c  connection.h  essid-list.c  essid-list.h  hosts.c  hosts.h  ifaces-list.c  ifaces-list.h  locations-combo.c  locations-combo.h  main.c  mate-network.desktop.in.in  network-locations.c  network-locations.h  network-tool.c  network-tool.h  nm-integration.c  nm-integration.h
src/time/e-map/: Makefile.am
(+139 files in other folders)
