@YELP_HELP_RULES@

HELP_ID = mate-time-admin
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = \
	figures/time-map.png		\
	figures/time-servers.png	\
	figures/time-tool-automatic.png	\
	figures/time-tool-manual.png

HELP_LINGUAS = ca cs de el en_GB es fr gl it oc pt_BR ru sv zh_CN

-include $(top_srcdir)/git.mk
